php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #70240 Segfault when doing unset($var());
Submitted: 2015-08-11 12:56 UTC Modified: -
From: sjon at hortensius dot net Assigned:
Status: Closed Package: Reproducible crash
PHP Version: 7.0.0beta3 OS:
Private report: No CVE-ID: None
 [2015-08-11 12:56 UTC] sjon at hortensius dot net
Description:
------------
This only started happening in php-7, before that it would fail better

Test script:
---------------
from http://3v4l.org/bgihv

<?php
unset($var());

Expected result:
----------------
Fatal error: Can't use function return value in write context in /in/bgihv on line 2
Process exited with code 255.

Actual result:
--------------
Process exited with code 139.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2015-08-11 13:49 UTC] laruence@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src.git;a=commit;h=4064ee30615280396db27ee86afafaf2a00dc9c9
Log: Fixed bug #70240 (Segfault when doing unset($var());)
 [2015-08-11 13:49 UTC] laruence@php.net
-Status: Open +Status: Closed
 [2015-08-18 16:24 UTC] ab@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src.git;a=commit;h=4064ee30615280396db27ee86afafaf2a00dc9c9
Log: Fixed bug #70240 (Segfault when doing unset($var());)
 [2016-07-20 11:37 UTC] davey@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src.git;a=commit;h=4064ee30615280396db27ee86afafaf2a00dc9c9
Log: Fixed bug #70240 (Segfault when doing unset($var());)
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 13:00:02 2026 UTC