Fixed bug #70240 (Segfault when doing unset($var());)